tests/fail/semantics/enum_incomplete_match/main.kira
enum ParseError {
    InvalidFormat: String = "bad"
    UnexpectedEnd
}

@Main
function main() {
    let value = ParseError.UnexpectedEnd
    match value {
        InvalidFormat(text) -> print(text);
    }
    return
}
